(library
 (name miaou_widgets_display)
 (public_name miaou-core.widgets.display)
 (modules
  pager_widget
  file_pager
  table_widget
  table_widget_sdl
  tree_widget
  list_widget
  description_list
  sparkline_widget
  line_chart_widget
  bar_chart_widget
  chart_utils
  braille_canvas
  octant_canvas
  terminal_caps
  framebuffer_widget
  sdl_chart_context
  qr_code_widget
  image_widget
  widgets
  palette
  palette_sdl)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid ppx_blob ppx_enforce))
 (preprocessor_deps
  (file pager_widget.mli)
  (file list_widget.mli)
  (file description_list.mli)
  (file table_widget.mli)
  (file tree_widget.mli)
  (file sparkline_widget.mli)
  (file line_chart_widget.mli)
  (file bar_chart_widget.mli)
  (file framebuffer_widget.mli))
 (libraries
  yojson
  str
  eio
  eio.unix
  unix
  miaou-core.helpers
  miaou-core.interfaces
  miaou-core.style
  qrc
  imagelib
  imagelib.unix
  miaou-registry))
