(library
 (name miaou_widgets_input)
 (public_name miaou-core.widgets.input)
 (modules
  textbox_widget
  textarea_widget
  validated_textbox_widget
  select_widget
  select_widget_sdl
  checkbox_widget
  radio_button_widget
  button_widget
  switch_widget
  event_result)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid ppx_blob ppx_enforce))
 (preprocessor_deps
  (file textbox_widget.mli)
  (file textarea_widget.mli)
  (file validated_textbox_widget.mli)
  (file select_widget.mli)
  (file checkbox_widget.mli)
  (file radio_button_widget.mli)
  (file button_widget.mli)
  (file switch_widget.mli))
 (libraries
  miaou-core.widgets.display
  miaou-core.helpers
  miaou-core.interfaces
  lambda-term
  miaou-registry))
