(library
 (name miaou_widgets_layout)
 (public_name miaou-core.widgets.layout)
 (modules
  box_widget
  pane
  pane_layout
  vsection
  list_nav
  progress_widget
  progress_widget_sdl
  spinner_widget
  spinner_widget_sdl
  file_browser_widget
  card_widget
  sidebar_widget
  flex_layout
  grid_layout
  toast_widget
  canvas_widget)
 (instrumentation
  (backend bisect_ppx))
 (libraries
  miaou-core.widgets.display
  miaou-core.widgets.input
  miaou-core.helpers
  miaou-core.interfaces
  miaou-core.canvas
  miaou-core.style
  lambda-term))
