(library
 (name miaou_widgets_layout)
 (public_name miaou-core.widgets.layout)
 (modules
  box_widget
  pane
  pane_layout
  vsection
  list_nav
  progress_widget
  progress_widget_sdl
  spinner_widget
  spinner_widget_sdl
  file_browser_widget
  card_widget
  sidebar_widget
  flex_layout
  grid_layout
  toast_widget
  canvas_widget)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid ppx_blob ppx_enforce))
 (preprocessor_deps
  (file box_widget.mli)
  (file progress_widget.mli)
  (file spinner_widget.mli)
  (file file_browser_widget.mli)
  (file card_widget.mli)
  (file toast_widget.mli)
  (file canvas_widget.mli))
 (libraries
  miaou-core.widgets.display
  miaou-core.widgets.input
  miaou-core.helpers
  miaou-core.interfaces
  miaou-core.canvas
  miaou-core.style
  lambda-term
  miaou-registry))
