(library
 (name miaou_widgets_navigation)
 (public_name miaou-core.widgets.navigation)
 (modules link_widget tabs_widget breadcrumbs_widget)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_forbid))
 (libraries
  miaou-core.widgets.display
  miaou-core.helpers
  miaou-core.interfaces
  miaou-core.core
  lambda-term))
