(library
 (name box_widget_demo)
 (modules page)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (file README.md))
 (libraries demo_shared miaou miaou-core.lib_miaou_internal))

(executable
 (name main)
 (public_name miaou.box_widget-demo)
 (package miaou)
 (modules main)
 (libraries box_widget_demo miaou-runner.tui miaou-core.helpers eio_main))
