(library
 (name button_demo)
 (modules page)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  (file README.md))
 (libraries demo_shared miaou miaou-core.lib_miaou_internal))

(executable
 (name main)
 (public_name miaou.button-demo)
 (package miaou)
 (modules main)
 (libraries button_demo miaou-runner.tui miaou-core.helpers eio_main))
